--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
+    "version": 2,
     "builds": [
-      {
-        "src": "api.py",
-        "use": "@vercel/python"
-      }
+      { "src": "app.py", "use": "@vercel/python" }
     ],
     "routes": [
-      {
-        "src": "/api",
-        "dest": "api.py"
-      }
+      { "src": "/api", "dest": "/app.py" }
     ]
   }
   
